--- a/themes/san-diego/source/styles/_wares.scss
+++ b/themes/san-diego/source/styles/_wares.scss
@@ -15,8 +15,10 @@
 
         @media screen and (max-width: variables.$mobile-breakpoint) {
                 padding: 0;
-                min-height: 0;
-                justify-content: flex-start;
+                // Fill available viewport space so carousel is vertically centered
+                // Account for header (~200px) and tabs (~60px) and safe area
+                min-height: calc(100svh - 280px - env(safe-area-inset-bottom, 0px));
+                justify-content: center; // Center content vertically
         }
 }
 
